# veritcal_cartesian_manipulator

./: LICENSE  README.md
vertical_cartesian/: CMakeLists.txt  package.xml
vertical_cartesian/launch/: display.launch  gazebo.launch
vertical_cartesian/meshes/: base_link.STL  link1.STL  link2.STL
vertical_cartesian/urdf/: vertical_cartesian.csv  vertical_cartesian.urdf
